--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -1,3 +1,24 @@
+    <style>
+        /* Basic responsive styling */
+        .carousel-container {
+            width: 90%;
+            margin: 20px auto;
+            overflow-x: auto;
+        }
+
+        .carousel {
+            display: flex;
+            white-space: nowrap;
+        }
+
+        .carousel img {
+            height: 200px; /* Adjust as needed */
+            margin-right: 10px;
+        }
+
+        /* Add more styles for responsiveness and appearance as needed */
+    </style>
+
 <center></center><img src="https://img.mailinblue.com/2102565/images/content_library/original/6650b51e203fef16b680723f.png" alt="The Nutri-Score evolves" width="570" border="0" /></center>
 <div>
    <p>We are excited to announce&nbsp;<strong>the launch of Nutri-Score v2 on Open Food Facts</strong>, the first major upgrade of the nutritional labelling system.</p>
@@ -61,3 +82,54 @@
 &shy;
 <img src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab73203fef16b6806fad.png" alt="" width="570" border="0" />
 &shy;
+
+    <h2>Nutri-Score Visuals</h2>
+
+    <h3>Milks</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
+        </div>
+    </div>
+
+    <h3>Beverages</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
+        </div>
+    </div>
+
+    <h3>Sweetened & Flavored Drinks</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
+        </div>
+    </div>
+
+    <h3>Oils</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
+        </div>
+    </div>
+
+    <h3>Other</h3>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
+        </div>
+    </div>
