--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -19,15 +19,26 @@
         /* Add more styles for responsiveness and appearance as needed */
     </style>
 
-<center></center><img src="https://img.mailinblue.com/2102565/images/content_library/original/6650b51e203fef16b680723f.png" alt="The Nutri-Score evolves" width="570" border="0" /></center>
+<center>
+        <div class="carousel-container">
+        <div class="carousel">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
+        </div>
+    </div>
+</center>
+
 <div>
    <p>We are excited to announce&nbsp;<strong>the launch of Nutri-Score v2 on Open Food Facts</strong>, the first major upgrade of the nutritional labelling system.</p>
    <p>This is available today on our Open Food Facts mobile app for Android and iPhone, as well as on our website, in line with a long tradition of pioneering firsts.</p>
 </div>
-<h1 class="title-2 emphasized-title"><strong>What is Nutri-Score?</strong></h1>
+<h2 class="title-2 emphasized-title"><strong>What is Nutri-Score?</strong></h1>
 <p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
-<h1 class="title-2 emphasized-title"><strong>Why is Nutri-Score changing?</strong></h1>
+<h2 class="title-2 emphasized-title"><strong>Why is Nutri-Score changing?</strong></h1>
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
    <li><strong>Better evaluate all drinks</strong>The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
@@ -38,21 +49,21 @@
 </ul>
 <h1 class="title-2 emphasized-title"><strong>How to differentiate between old Nutri-Score and new calculation?</strong></h1>
 <p>From now on,&nbsp;the logo can display a &quot;New calculation&quot; mention to clarify that it is indeed the new calculation.</p>
-<h1 class="title-2 emphasized-title"><strong>Where to find the new Nutri-Score calculation?</strong></h1>
+<h2 class="title-2 emphasized-title"><strong>Where to find the new Nutri-Score calculation?</strong></h1>
 <p>Nutri-Score is in use in several countries:&nbsp;Germany,&nbsp;Belgium,&nbsp;Spain,&nbsp;France,&nbsp;Luxembourg,&nbsp;the Netherlands,&nbsp;and Switzerland.</p>
 <p>Manufacturers have until 2026 at the latest to replace the old calculation with the new one.</p>
 <p>Without waiting,&nbsp;you can already find the new calculation in the Open Food Facts application,&nbsp;even if the manufacturers have not updated the score.</p>
-<h1 class="title-2 emphasized-title"><strong>What does not change</strong></h1>
+<h2 class="title-2 emphasized-title"><strong>What does not change</strong></h1>
 <p>Nutri-Score is a score designed to measure nutritional quality.&nbsp;It is complementary to the NOVA group on ultra-processed foods (also present in the application).</p>
 <p>For manufacturers, the display of Nutri-Score remains optional.</p>
-<h1 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h1>
+<h2 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h1>
 <p><em>"This new algorithm will enhance the effectiveness of the Nutri-score in classifying foods and drinks, in line with the main dietary recommendations of European countries, and guide consumers towards informed choices that are good for their health"&nbsp;</em>explains the French Directorate-General for Health.</p>
 <p><strong>✅ Strengthened criterion</strong>&nbsp;</p>
 <p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
 <p><strong>✅&nbsp;</strong><strong>Distinctive banner for new calculation</strong>&nbsp;</p>
 <p>Nutri-Score v2 will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
 <img src="https://img.mailinblue.com/2102565/images/content_library/original/6650b62c815ba7d4d20aba8b.jpeg" alt="" width="576" border="0" />
-<h1 class="title-2 emphasized-title">Where can you find the Nutri-Score V2 ?</h1>
+<h2 class="title-2 emphasized-title">Where can you find the Nutri-Score V2 ?</h1>
 <ul>
    <li><strong>The Open Food Facts website:</strong>&nbsp;You can find Nutri-Score v2 on the product pages of our website,&nbsp;<a href="https://world.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
    <li><strong>The official Open Food Facts mobile app:</strong>&nbsp;The Nutri-Score v2 is also available today on&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>our mobile app</u></a>, allowing you to scan products and see their nutritional scores on the go.</li>
@@ -60,14 +71,14 @@
    <li><strong>Our OpenData Exports:</strong>&nbsp;Nutri-Score v2 is also available in&nbsp;<a href="https://world.openfoodfacts.org/data"><u>our data exports</u></a>, allowing researchers, journalists, and other stakeholders to access this new nutritional information.</li>
    <li><strong>For the 200+ web and mobile applications based on Open Food Facts,</strong>&nbsp;we have made available new logos to use and advice to&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">support the migration in this tutorial</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Please direct additional questions at&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
-<h1 class="title-2 emphasized-title">For journalists</h1>
+<h2 class="title-2 emphasized-title">For journalists</h1>
 <ul>
    <li><strong>If you&rsquo;re covering this subject,</strong>&nbsp;we have a press kit around Nutri-Score V2 and Open Food Facts. We also did a press webinar a few hours ago that will be available shortly for replay. If you&rsquo;d like to be added to our press listings for advance briefings, please get in touch at&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
-<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>
+<!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
 
-<h1 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
+<h2 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
 <h4>Open Food Facts has been a historical supporter of the Nutri-Score since 2014.&nbsp;</h4>
 
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Read our page Open Food Facts and the Nutri-Score</a>
@@ -77,11 +88,8 @@
 <p><strong>✔ a clear and concise summary of the nutritional quality</strong>&nbsp;of products,&nbsp;</p>
 <p><strong>✔&nbsp;</strong>helping consumers make informed choices</p>
 <p><strong>✔&nbsp;</strong>encouraging food manufacturers to improve the nutritional profile of their products.</p>
-<h1 class="title-2 emphasized-title">Some of the changes at a glance</h1>
-<img src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab6c6cb5f9c9c2293e2e.png" alt="" width="570" border="0" />
-&shy;
-<img src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab73203fef16b6806fad.png" alt="" width="570" border="0" />
-&shy;
+<h2 class="title-2 emphasized-title">Some of the changes at a glance</h1>
+
 
     <h2>Nutri-Score Visuals</h2>
 
@@ -119,17 +127,14 @@
         </div>
     </div>
 
-    <h3>Other</h3>
+    <h3>Poultry and dish</h3>
     <div class="carousel-container">
         <div class="carousel">
             <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
             <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
         </div>
     </div>
+
+<!--
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
