--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -35,28 +35,40 @@
    <p>We are excited to announce&nbsp;<strong>the launch of Nutri-Score v2 on Open Food Facts</strong>, the first major upgrade of the nutritional labelling system.</p>
    <p>This is available today on our Open Food Facts mobile app for Android and iPhone, as well as on our website, in line with a long tradition of pioneering firsts.</p>
 </div>
-<h2 class="title-2 emphasized-title"><strong>What is Nutri-Score?</strong></h1>
+<h2 class="title-2 emphasized-title">
+    <strong>What is Nutri-Score?</strong>
+</h2>
 <p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
-<h2 class="title-2 emphasized-title"><strong>Why is Nutri-Score changing?</strong></h1>
+
+<h2 class="title-2 emphasized-title">
+    <strong>Why is Nutri-Score changing?</strong>
+</h2>
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
-   <li><strong>Better evaluate all drinks</strong>The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
-   <li><strong>Better ranking of drinks</strong>Sugar content is better taken into account and favors low-sugar drinks.&nbsp;Sweeteners will also be penalized:&nbsp;diet sodas will be downgraded from a B rating to between C and E.&nbsp;Water remains the recommended drink.</li>
-   <li><strong>Salt and sugar penalized</strong>Products that are too sweet or too salty will see their rating further downgraded.</li>
-   <li><strong>Prioritization of oils and fish</strong>The rating of some fatty fish and oils rich in good fats will improve.</li>
-   <li><strong>Limit red meat</strong>Red meat consumption should be limited.&nbsp;This is why poultry will be comparatively better ranked.</li>
+   <li><strong>Better evaluate all drinks</strong>&nbsp;The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
+   <li><strong>Better ranking of drinks</strong>&nbsp;Sugar content is better taken into account and favors low-sugar drinks.&nbsp;Sweeteners will also be penalized:&nbsp;diet sodas will be downgraded from a B rating to between C and E.&nbsp;Water remains the recommended drink.</li>
+   <li><strong>Salt and sugar penalized</strong>&nbsp;Products that are too sweet or too salty will see their rating further downgraded.</li>
+   <li><strong>Prioritization of oils and fish</strong>&nbsp;The rating of some fatty fish and oils rich in good fats will improve.</li>
+   <li><strong>Limit red meat</strong>&nbsp;Red meat consumption should be limited.&nbsp;This is why poultry will be comparatively better ranked.</li>
 </ul>
-<h1 class="title-2 emphasized-title"><strong>How to differentiate between old Nutri-Score and new calculation?</strong></h1>
+
+<h2 class="title-2 emphasized-title">
+    <strong>How to differentiate between old Nutri-Score and new calculation?</strong>
+</h2>
+
 <p>From now on,&nbsp;the logo can display a &quot;New calculation&quot; mention to clarify that it is indeed the new calculation.</p>
-<h2 class="title-2 emphasized-title"><strong>Where to find the new Nutri-Score calculation?</strong></h1>
+
+<h2 class="title-2 emphasized-title"><strong>Where to find the new Nutri-Score calculation?</strong></h2>
 <p>Nutri-Score is in use in several countries:&nbsp;Germany,&nbsp;Belgium,&nbsp;Spain,&nbsp;France,&nbsp;Luxembourg,&nbsp;the Netherlands,&nbsp;and Switzerland.</p>
 <p>Manufacturers have until 2026 at the latest to replace the old calculation with the new one.</p>
 <p>Without waiting,&nbsp;you can already find the new calculation in the Open Food Facts application,&nbsp;even if the manufacturers have not updated the score.</p>
-<h2 class="title-2 emphasized-title"><strong>What does not change</strong></h1>
+
+<h2 class="title-2 emphasized-title"><strong>What does not change</strong></h2>
 <p>Nutri-Score is a score designed to measure nutritional quality.&nbsp;It is complementary to the NOVA group on ultra-processed foods (also present in the application).</p>
 <p>For manufacturers, the display of Nutri-Score remains optional.</p>
-<h2 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h1>
+
+<h2 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h2>
 <p><em>"This new algorithm will enhance the effectiveness of the Nutri-score in classifying foods and drinks, in line with the main dietary recommendations of European countries, and guide consumers towards informed choices that are good for their health"&nbsp;</em>explains the French Directorate-General for Health.</p>
 <p><strong>✅ Strengthened criterion</strong>&nbsp;</p>
 <p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
@@ -127,7 +139,7 @@
         </div>
     </div>
 
-    <h3>Poultry and dish</h3>
+    <h3>Poultry and fish</h3>
     <div class="carousel-container">
         <div class="carousel">
             <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
