--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -1,34 +1,7 @@
-    <style>
-        /* Basic responsive styling */
-        .carousel-container {
-            width: 90%;
-            margin: 20px auto;
-            overflow-x: auto;
-        }
 
-        .carousel {
-            display: flex;
-            white-space: nowrap;
-        }
-
-        .carousel img {
-            height: 200px; /* Adjust as needed */
-            margin-right: 10px;
-        }
-
-        /* Add more styles for responsiveness and appearance as needed */
-    </style>
 
 <center>
-        <div class="carousel-container">
-        <div class="carousel">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
-        </div>
-    </div>
+  <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
 </center>
 
 <div>
@@ -38,12 +11,16 @@
 <h2 class="title-2 emphasized-title">
     <strong>What is Nutri-Score?</strong>
 </h2>
+<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
 <p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
 
 <h2 class="title-2 emphasized-title">
     <strong>Why is Nutri-Score changing?</strong>
 </h2>
+
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
    <li><strong>Better evaluate all drinks</strong>&nbsp;The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
@@ -81,7 +58,7 @@
    <li><strong>The official Open Food Facts mobile app:</strong>&nbsp;The Nutri-Score v2 is also available today on&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>our mobile app</u></a>, allowing you to scan products and see their nutritional scores on the go.</li>
    <li><strong>The Open Food Facts free Platform for Food Professionals:</strong>&nbsp;We have updated&nbsp;<a href="https://world.pro.openfoodfacts.org/"><u>our platform for professionals</u></a>&nbsp;to include Nutri-Score v2, enabling food manufacturers and retailers to improve the nutritional quality of their products.</li>
    <li><strong>Our OpenData Exports:</strong>&nbsp;Nutri-Score v2 is also available in&nbsp;<a href="https://world.openfoodfacts.org/data"><u>our data exports</u></a>, allowing researchers, journalists, and other stakeholders to access this new nutritional information.</li>
-   <li><strong>For the 200+ web and mobile applications based on Open Food Facts,</strong>&nbsp;we have made available new logos to use and advice to&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">support the migration in this tutorial</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Please direct additional questions at&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
+   <li><strong>For the 200+ web and mobile applications based on Open Food Facts,</strong>&nbsp;we have made available new logos to use and advice to&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/reference/api-tutorials/get-the-nutriscore/" target="_blank">support the migration in this tutorial</a>. Please direct additional questions at&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
 <h2 class="title-2 emphasized-title">For journalists</h1>
 <ul>
@@ -92,7 +69,7 @@
 
 <h2 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
 <h4>Open Food Facts has been a historical supporter of the Nutri-Score since 2014.&nbsp;</h4>
-
+<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Read our page Open Food Facts and the Nutri-Score</a>
 
 <p>We believe that Nutri-Score v2 is&nbsp;<strong>a valuable tool</strong>&nbsp;for consumers, food manufacturers, and retailers alike.&nbsp;</p>
@@ -100,7 +77,7 @@
 <p><strong>✔ a clear and concise summary of the nutritional quality</strong>&nbsp;of products,&nbsp;</p>
 <p><strong>✔&nbsp;</strong>helping consumers make informed choices</p>
 <p><strong>✔&nbsp;</strong>encouraging food manufacturers to improve the nutritional profile of their products.</p>
-<h2 class="title-2 emphasized-title">Some of the changes at a glance</h1>
+<h2 class="title-2 emphasized-title">Some of the changes at a glance</h2>
 
 
     <h2>Nutri-Score Visuals</h2>
@@ -150,3 +127,4 @@
 <!--
             <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
             <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
+-->
