--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -1,7 +1,7 @@
 
 
 <center>
-  <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
+  <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
 </center>
 
 <div>
@@ -11,7 +11,7 @@
 <h2 class="title-2 emphasized-title">
     <strong>What is Nutri-Score?</strong>
 </h2>
-<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
+<img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
 <p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
 
@@ -19,8 +19,8 @@
     <strong>Why is Nutri-Score changing?</strong>
 </h2>
 
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20EN.png" alt="Nutri-Score facts">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20EN.png" alt="Why a new algorithm">
 <p>The Nutri-Score formula is evolving to provide better recommendations:</p>
 <ul>
    <li><strong>Better evaluate all drinks</strong>&nbsp;The comparative scores of milk,&nbsp;sweetened dairy drinks,&nbsp;and plant-based drinks have been better differentiated in the new algorithm.</li>
@@ -69,7 +69,7 @@
 
 <h2 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
 <h4>Open Food Facts has been a historical supporter of the Nutri-Score since 2014.&nbsp;</h4>
-<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
+<img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Read our page Open Food Facts and the Nutri-Score</a>
 
 <p>We believe that Nutri-Score v2 is&nbsp;<strong>a valuable tool</strong>&nbsp;for consumers, food manufacturers, and retailers alike.&nbsp;</p>
@@ -85,42 +85,42 @@
     <h3>Milks</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20whole%20-%20EN.png" alt="Nutri-Score for whole milk">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20EN.png" alt="Nutri-Score for skimmed milk">
         </div>
     </div>
 
     <h3>Beverages</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20EN.png" alt="Nutri-Score for fruit juices">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20EN.png" alt="Nutri-Score for water">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20EN.png" alt="Nutri-Score for sugar-sweetened beverages">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20EN.png" alt="Nutri-Score for zero-sugar cola">
         </div>
     </div>
 
     <h3>Sweetened & Flavored Drinks</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20EN.png" alt="Nutri-Score for drinkable yogurt">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20EN.png" alt="Nutri-Score for milkshake">
         </div>
     </div>
 
     <h3>Oils</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20EN.png" alt="Nutri-Score for olive oil">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20EN.png" alt="Nutri-Score for sunflower oil">
         </div>
     </div>
 
     <h3>Poultry and fish</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
-            <img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Poultry%20-%20EN.png" alt="Nutri-Score for poultry">
+            <img width="100px" src="https://world.openfoodfacts.net/images/misc/new-nutriscore/Fatty%20fish%20-%20EN.png" alt="Nutri-Score for fatty fish">
         </div>
     </div>
 
