--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -51,7 +51,7 @@
 <p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
 <p><strong>✅&nbsp;</strong><strong>Distinctive banner for new calculation</strong>&nbsp;</p>
 <p>Nutri-Score v2 will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
-<img src="https://img.mailinblue.com/2102565/images/content_library/original/6650b62c815ba7d4d20aba8b.jpeg" alt="" width="576" border="0" />
+<img src="https://world.openfoodfacts.net/images/misc/new-nutriscore/before-after-en.png" alt="" width="600px" border="0" />
 <h2 class="title-2 emphasized-title">Where can you find the Nutri-Score V2 ?</h1>
 <ul>
    <li><strong>The Open Food Facts website:</strong>&nbsp;You can find Nutri-Score v2 on the product pages of our website,&nbsp;<a href="https://world.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
