Update Nutri-Score information and journalist section

--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -60,14 +60,14 @@
    <li><strong>Nos exports OpenData :</strong>&nbsp;Nutri-Score v2 est également disponible en&nbsp;<a href="https://world.openfoodfacts.org/data"><u>nos exports de données</u></a>, permettant aux chercheurs, journalistes et autres parties prenantes d'accéder à ces nouvelles informations nutritionnelles.</li>
    <li><strong>Pour les 200+ applications Web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils pour&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/reference/api-tutorials/get-the-nutriscore/" target="_blank">soutenir la migration dans ce tutoriel</a>. Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
-<h2 class="title-2 emphasized-title">Pour les journalistes</h1>
+<h2 class="title-2 emphasized-title">Pour les journalistes</h2>
 <ul>
-   <li><strong>Si vous&rsquo;abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse autour du Nutri-Score V2 et d'Open Food Facts. Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay. Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
+   <li><strong>Si vous&rsquo;abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse autour du Nutri-Score V2 et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
 <!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
-
-<h2 class="title-2 emphasized-title"><strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></h1>
+<h2 class="title-2 emphasized-title">Pour les réutilisateurs</h2>
+<strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a>
 <h4>Open Food Facts est un partisan historique du Nutri-Score depuis 2014.&nbsp;</h4>
 <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20FR.png" alt="Open Food Facts et le Nutri-Score">
 <a class="button round secondary small" href="/open-food-facts-et-le-nutriscore">Lire notre page Open Food Facts et le Nutri-Score</a>
