--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -19,7 +19,7 @@
     <strong>Pourquoi le Nutri-Score évolue-t-il ?</strong>
 </h2>
 
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="https://blog.openfoodfacts.org/fr/kit-de-presse-nutriscore-v2">
+            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="https://blog.openfoodfacts.org/fr/kit-de-presse-nouveau-nutri-score">
             <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
 <p>La formule du Nutri-Score évolue pour fournir de meilleures recommandations basées sur de nouvelles connaissances scientifiques:</p>
 <ul>
@@ -62,7 +62,7 @@
 </ul>
 <h2 class="title-2 emphasized-title">Pour les journalistes</h2>
 <ul>
-   <li><strong>Si vous abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse autour du Nutri-Score V2 et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
+   <li><strong>Si vous abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse disponible sur demande autour du Nutri-Score V2 et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
 <!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
