feat: Update new-nutriscore.html

--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -1,7 +1,5 @@
-
-
 <center>
-  <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Nutritional Epidemiology Research Team">
+  <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Le Nutri-Score evolue - Open Food Facts">
 </center>
 
 <div>
@@ -19,8 +17,8 @@
     <strong>Pourquoi le Nutri-Score évolue-t-il ?</strong>
 </h2>
 
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="https://blog.openfoodfacts.org/fr/kit-de-presse-nouveau-nutri-score">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="Informations sur le Nutri-Score">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
 <p>La formule du Nutri-Score évolue pour fournir de meilleures recommandations basées sur de nouvelles connaissances scientifiques:</p>
 <ul>
    <li><strong>Mieux évaluer toutes les boissons</strong>&nbsp;-&nbsp;Les scores comparatifs du lait,&nbsp;des boissons lactées sucrées,&nbsp;et des boissons végétales ont été mieux différenciés dans le nouvel algorithme.</li>
@@ -37,8 +35,9 @@
 <p>Désormais,&nbsp;le logo peut afficher une &quot;Nouveau calcul&quot; mention pour préciser que c'est bien le nouveau calcul.</p>
 
 <h2 class="title-2 emphasized-title"><strong>Où trouver le nouveau calcul du Nutri-Score ?</strong></h2>
-<p>Le Nutri-Score est utilisé dans plusieurs pays :&nbsp;Allemagne,&nbsp;Belgique,&nbsp;Espagne,&nbsp;France,&nbsp;Luxembourg,&nbsp;les Pays-Bas,&nbsp;et la Suisse.</p>
-<p>Les fabricants ont jusqu'en **2026** au plus tard **pour remplacer** l'ancien calcul par le nouveau.</p>
+<p>Le nouveau Nutri-Score est déjà utilisé dans plusieurs pays :&nbsp;Allemagne,&nbsp;Belgique,&nbsp;Espagne,&nbsp;Luxembourg,&nbsp;les Pays-Bas,&nbsp;et la Suisse.</p>
+<p>En France, le nouveau calcul du Nutri-Score entrera en vigueur une fois l'arrêté signé. Le nouveau calcul arrivera ensuite progressivement sur les emballages des produits.
+<p>Les fabricants ont au maximum 2 ans après la signature de l'arrêté **pour remplacer** l'ancien calcul par le nouveau.</p>
 <p>Sans attendre,&nbsp;vous pouvez déjà retrouver le nouveau calcul dans l'application Open Food Facts,&nbsp;même si les fabricants n'ont pas mis à jour le score.</p>
 
 <h2 class="title-2 emphasized-title"><strong>Ce qui ne change pas</strong></h2>
@@ -65,7 +64,7 @@
    <li><strong>Si vous abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse disponible sur demande autour du Nutri-Score V2 et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
-<!--<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/nutriscore-v2-presskit">Nutri-Score v2 presskit</a>-->
+<a class="button round secondary small" href="https://blog.openfoodfacts.org/fr/kit-de-presse-nouveau-nutri-score">Kit de presse sur le nouveau Nutri-Score v2</a>
 <h2 class="title-2 emphasized-title">Pour les réutilisateurs</h2>
 <strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a>
 <h4>Open Food Facts est un partisan historique du Nutri-Score depuis 2014.&nbsp;</h4>
