--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -124,6 +124,6 @@
     </div>
 
 <!--
-            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20EN%20-%20light.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20dark%20-%20FR.png" alt="Nutri-Score evolves - A closer look">
+            <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20FR%20-%20light.png" alt="Nutri-Score evolves - A closer look">
 -->
