--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -28,6 +28,13 @@
    <li><strong>Limiter la viande rouge</strong>&nbsp;-&nbsp;La consommation de viande rouge doit être limitée.&nbsp;C'est pourquoi la volaille sera comparativement mieux classée.</li>
 </ul>
 
+<ul>
+<li><strong>La note des huiles riches en bonnes graisses (huiles d’olive, de colza, noix, lin, …) et de certains poissons gras (maquereaux, sardines, harengs,…) s’améliore.</strong></li>
+<li><strong>Il est plus facile de repérer les produits complets, riches en fibres, qui ont désormais de meilleurs scores que leurs équivalents raffinés</strong></li>
+<li><strong>Le nouveau Nutri-Score note plus sévèrement les aliments sucrés et salés.</strong></li>
+<li><strong>Au rayon des viandes, la volaille est dorénavant mieux classée que la viande rouge.</strong></li>
+</ul>
+
 <h2 class="title-2 emphasized-title">
     <strong>Comment faire la différence entre l'ancien Nutri-Score et le nouveau calcul ?</strong>
 </h2>
