--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -9,7 +9,7 @@
 <h2 class="title-2 emphasized-title">
     <strong>Qu'est-ce que le Nutri-Score ?</strong>
 </h2>
-<img width="200px" src="https://img.mailinblue.com/2102565/images/content_library/original/6650ab73203fef16b6806fad.png" alt="Qu'est-ce que le Nutri-Score ?">
+<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20FR.png" alt="Qu'est-ce que le Nutri-Score ?">
 <p>Nutri-Score est un logo qui a pour but de vous informer sur la qualité nutritionnelle des aliments.&nbsp;Le code couleur va du vert foncé (A) pour les produits les plus sains au rouge foncé (E) pour les moins sains.</p>
 <a class="button round secondary small" href="/nutriscore">Lisez notre page explicative sur le Nutri-Score</a>
 
