new promo images

--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -1,7 +1,8 @@
-<p><center>
-  <img width="600px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Le Nutri-Score evolue - Open Food Facts">
-</center>
-</p>
+<br><br>
+
+<img src="https://static.openfoodfacts.org/images/misc/nutriscore/new-nutriscore-header-fr.jpg" alt="Le Nutri-Score evolue - Open Food Facts">
+
+<br><br>
 
 <div>
    <p>Nous sommes heureux d'annoncer&nbsp;<strong>le lancement du nouveau Nutri-Score sur Open Food Facts</strong>, la première mise à jour majeure du système d'étiquetage nutritionnel.</p>
