--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -1,16 +1,17 @@
-<center>
-  <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20EN.png" alt="Nutri-Score evolves - A closer look">
-</center>
+<br><br>
+<img src="https://static.openfoodfacts.org/images/misc/nutriscore/new-nutriscore-h
+eader-en.jpg" alt="Nutri-Score evolves - A closer look">
+<br><br>
 
 <div>
-   <p>We are excited to announce&nbsp;<strong>the launch of Nutri-Score v2 on Open Food Facts</strong>, the first major upgrade of the nutritional labelling system.</p>
+   <p>We are excited to announce&nbsp;<strong>the launch of new Nutri-Score on Open Food Facts</strong>, the first major upgrade of the nutritional labelling system.</p>
    <p>This is available today on our Open Food Facts mobile app for Android and iPhone, as well as on our website, in line with a long tradition of pioneering firsts.</p>
 </div>
 <h2 class="title-2 emphasized-title">
-    <strong>What is Nutri-Score?</strong>
+    <strong>What is the Nutri-Score?</strong>
 </h2>
 <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20EN.png" alt="What is the Nutri-Score">
-<p>Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
+<p>The Nutri-Score is a logo that aims to inform you about the nutritional quality of food.&nbsp;The color code ranges from dark green (A) for the healthiest products to dark red (E) for the least healthy.</p>
 <a class="button round secondary small" href="/nutriscore">Read our explanation page about the Nutri-Score</a>
 
 <h2 class="title-2 emphasized-title">
@@ -49,14 +50,14 @@
 <p><strong>✅ Strengthened criterion</strong>&nbsp;</p>
 <p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
 <p><strong>✅&nbsp;</strong><strong>Distinctive banner for new calculation</strong>&nbsp;</p>
-<p>Nutri-Score v2 will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
+<p>new Nutri-Score will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
 <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-en.png" alt="" width="600px" border="0" />
 <h2 class="title-2 emphasized-title">Where can you find the new Nutri-Score?</h1>
 <ul>
-   <li><strong>The Open Food Facts website:</strong>&nbsp;You can find Nutri-Score v2 on the product pages of our website,&nbsp;<a href="https://world.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
-   <li><strong>The official Open Food Facts mobile app:</strong>&nbsp;The Nutri-Score v2 is also available today on&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>our mobile app</u></a>, allowing you to scan products and see their nutritional scores on the go.</li>
-   <li><strong>The Open Food Facts free Platform for Food Professionals:</strong>&nbsp;We have updated&nbsp;<a href="https://world.pro.openfoodfacts.org/"><u>our platform for professionals</u></a>&nbsp;to include Nutri-Score v2, enabling food manufacturers and retailers to improve the nutritional quality of their products.</li>
-   <li><strong>Our OpenData Exports:</strong>&nbsp;Nutri-Score v2 is also available in&nbsp;<a href="https://world.openfoodfacts.org/data"><u>our data exports</u></a>, allowing researchers, journalists, and other stakeholders to access this new nutritional information.</li>
+   <li><strong>The Open Food Facts website:</strong>&nbsp;You can find new Nutri-Score on the product pages of our website,&nbsp;<a href="https://world.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
+   <li><strong>The official Open Food Facts mobile app:</strong>&nbsp;The new Nutri-Score is also available today on&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>our mobile app</u></a>, allowing you to scan products and see their nutritional scores on the go.</li>
+   <li><strong>The Open Food Facts free Platform for Food Professionals:</strong>&nbsp;We have updated&nbsp;<a href="https://world.pro.openfoodfacts.org/"><u>our platform for professionals</u></a>&nbsp;to include new Nutri-Score, enabling food manufacturers and retailers to improve the nutritional quality of their products.</li>
+   <li><strong>Our OpenData Exports:</strong>&nbsp;new Nutri-Score is also available in&nbsp;<a href="https://world.openfoodfacts.org/data"><u>our data exports</u></a>, allowing researchers, journalists, and other stakeholders to access this new nutritional information.</li>
    <li><strong>For the 200+ web and mobile applications based on Open Food Facts,</strong>&nbsp;we have made available new logos to use and advice to&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/reference/api-tutorials/get-the-nutriscore/" target="_blank">support the migration in this tutorial</a>. Please direct additional questions at&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
 <h2 class="title-2 emphasized-title">For journalists</h1>
@@ -64,14 +65,14 @@
    <li><strong>If you&rsquo;re covering this subject,</strong>&nbsp;we have a press kit around the new Nutri-Score and Open Food Facts. We also did a press webinar a few hours ago that will be available shortly for replay. If you&rsquo;d like to be added to our press listings for advance briefings, please get in touch at&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
 
-<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/new-nutri-score-v2-presskit">Nutri-Score v2 presskit</a>
+<a class="button round secondary small" href="https://blog.openfoodfacts.org/en/new-nutri-score-v2-presskit">new Nutri-Score presskit</a>
 
 <h2 class="title-2 emphasized-title">Open Food Facts and the Nutri-Score</h1>
 <h4>Open Food Facts has been a historical supporter of the Nutri-Score since 2014.&nbsp;</h4>
 <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20EN.png" alt="Nutri-Score and Open Food Facts">
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Read our page Open Food Facts and the Nutri-Score</a>
 
-<p>We believe that Nutri-Score v2 is&nbsp;<strong>a valuable tool</strong>&nbsp;for consumers, food manufacturers, and retailers alike.&nbsp;</p>
+<p>We believe that new Nutri-Score is&nbsp;<strong>a valuable tool</strong>&nbsp;for consumers, food manufacturers, and retailers alike.&nbsp;</p>
 <p>It provides:</p>
 <p><strong>✔ a clear and concise summary of the nutritional quality</strong>&nbsp;of products,&nbsp;</p>
 <p><strong>✔&nbsp;</strong>helping consumers make informed choices</p>
