new suggestions from SPF

--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -48,9 +48,11 @@ eader-en.jpg" alt="Nutri-Score evolves - A closer look">
 <h2 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h2>
 <p><em>"This new algorithm will enhance the effectiveness of the Nutri-score in classifying foods and drinks, in line with the main dietary recommendations of European countries, and guide consumers towards informed choices that are good for their health"&nbsp;</em>explains the French Directorate-General for Health.</p>
 <p><strong>✅ Strengthened criterion</strong>&nbsp;</p>
-<p>The EREN* scientific team has completely&nbsp;<strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, resulting in more scores that better reflect the nutritional quality of products,&nbsp;<strong>with many of them losing a grade</strong>.</p>
+<p>The European scientific commitee of the Nutri-Score <strong>reviewed the algorithm</strong>&nbsp;used to calculate the Nutri-Score, to better reflect the nutritional quality of products.
+    <strong>30% to 40% of products have a changed score.</strong></p>
 <p><strong>✅&nbsp;</strong><strong>Distinctive banner for new calculation</strong>&nbsp;</p>
-<p>new Nutri-Score will have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>. While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been correctly calculated.</p>
+<p>The Nutri-Score logo can how have&nbsp;<strong>a distinctive banner</strong>&nbsp;indicating that it has been calculated using&nbsp;<strong>the new formula</strong>.
+    While the banner is not mandatory on packs, it provides assurance that the Nutri-Score has been calculated with the new algorithm.</p>
 <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-en.png" alt="" width="600px" border="0" />
 <h2 class="title-2 emphasized-title">Where can you find the new Nutri-Score?</h1>
 <ul>
