--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -49,9 +49,11 @@
 <h2 class="title-2 emphasized-title">L’algorithme évolue pour être plus conforme aux recommandations alimentaires</h2>
 <p>"Ce nouvel algorithme permettra d'améliorer l'efficacité du Nutri-score dans la classification des aliments et des boissons, en ligne avec les principales recommandations alimentaires des pays européens, et d'orienter les consommateurs vers des choix éclairés et bons pour leur santé"&nbsp;</>explique la Direction générale de la santé (France).</p>
 <p><strong>✅Critères renforcés</strong>&nbsp;</p>
-<p>L'équipe scientifique EREN a complètement&nbsp;<strong>revu l'algorithme</strong>&nbsp;utilisé pour calculer le Nutri-Score, ce qui a donné lieu à davantage de scores reflétant mieux la qualité nutritionnelle des produits,&nbsp;<strong>avec beaucoup d'entre eux perdant une note</strong>.</p>
+<p>Le comité scientifique européen du Nutri-Score a &nbsp;<strong>revu l'algorithme</strong>&nbsp;utilisé pour calculer le Nutri-Score, afin de mieux refléter la qualité nutritionnelle des produits.
+    <strong>30% à 40% des produits changent de score.</strong></p>
 <p><strong>✅&nbsp;</strong><strong>Bannière distinctive pour nouveau calcul</strong>&nbsp;</p>
-<p>Le nouveau Nutri-Score a <strong>une bannière distinctive</strong> indiquant qu'il a été calculé à l'aide <strong>de la nouvelle formule</strong>. Bien que la bannière ne soit pas obligatoire sur les emballages, elle garantit que le Nutri-Score a été correctement calculé.</p>
+<p>Le logo Nutri-Score pourra à présent avoir <strong>une bannière distinctive</strong> indiquant qu'il a été calculé à l'aide <strong>de la nouvelle formule</strong>.
+    Bien que la bannière ne soit pas obligatoire sur les emballages, elle permet aux consommateurs de savoir que c’est le nouvel algorithme qui a été utilisé pour calculer le Nutri-Score.</p>
 <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-fr.png" alt="" width="600px" border="0" />
 <h2 class="title-2 emphasized-title">Où pouvez-vous trouver le nouveau Nutri-Score ?</h2>
 <ul>
